# code-edit-video

./: .gitignore  README.en.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
scripts/: generate_icon.py
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: encoder.rs  lib.rs  main.rs  recorder.rs
src/assets/: modal-shared.css
src/components/: CodeDisplay.vue
src/components/CodeDisplay/: FontSizeControl.vue  PasteModal.vue  PreviewPanel.vue  SlotConfigModal.vue  SplitModal.vue  ThemeSelector.vue  TypingControlBar.vue  UpdateNotification.vue
src/composables/: useAutoUpdate.ts  useCodePreview.ts  useContentSplit.ts  useDesktopRecording.ts  useEditorScroll.ts  useFontSize.ts  useKeyboardHandler.ts  usePreviewResize.ts  useRecording.ts  useScreenRecording.ts  useSlotConfig.ts  useTheme.ts  useTypingEngine.ts
src/config/: themes.ts
src/types/: index.ts
src/utils/: codeParser.ts  codeSplitter.ts  highlight.ts
